ALB Ingress Controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: control-plane-alb-c24b671e9a2b04a1eb5e5c3021629305e
    tier: control-plane-alb
  name: alb-ingress-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      component: control-plane-alb-c24b671e9a2b04a1eb5e5c3021629305e
      tier: control-plane-alb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        component: control-plane-alb-c24b671e9a2b04a1eb5e5c3021629305e
        tier: control-plane-alb
    spec:
      serviceAccountName: alb-ingress-controller
      containers:
      - name: alb-ingress-controller
        command:
        - /cloud-controller-manager
        - --cloud-config=/etc/kubernetes/config/cloud-config.conf
        - --enable-controllers="ingress"
        - --leader-election-id=alb
        image: registry-vpc.cn-shanghai.aliyuncs.com/acs/cloud-controller-manager-alb-amd64:1.0.0-aliyun.1
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1200
        readinessProbe:
          failureThreshold: 8
          tcpSocket:
            port: 10258
          initialDelaySeconds: 15
          timeoutSeconds: 15
        livenessProbe:
          failureThreshold: 8
          tcpSocket:
            port: 10258
          initialDelaySeconds: 15
          timeoutSeconds: 15
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - name: cloud-config
          mountPath: /etc/kubernetes/config
      volumes:
      - name: cloud-config
        configMap:
          name: alb-ingress-cloud-config
          items:
          - key: cloud-config.conf
            path: cloud-config.conf
