aliyun-acr-credential-helper.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aliyun-acr-credential-helper
  namespace: kube-system
  annotations:
    component.version: "v21.01.26.0"
    component.revision: "v0"
  labels:
    app: aliyun-acr-credential-helper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aliyun-acr-credential-helper
  template:
    metadata:
      labels:
        app: aliyun-acr-credential-helper
    spec:
      serviceAccountName: aliyun-acr-credential-helper
      priorityClassName: system-cluster-critical
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: k8s.aliyun.com
                operator: NotIn
                values:
                  - "true"
      containers:
      - name: aliyun-acr-credential-helper
        image: registry-vpc.cn-shanghai.aliyuncs.com/acs/aliyun-acr-credential-helper:v21.01.26.0-9ac7d9b-aliyun
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - ps -ef | grep aliyun-acr-credential-helper | grep -v grep
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - ps -ef | grep aliyun-acr-credential-helper | grep -v grep
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 50m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: addon-token
          mountPath: "/var/addon"
          readOnly: true
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: addon-token
          secret:
            secretName: addon.acr.token
            optional: true
            items:
            - key: addon.token.config
              path: token-config
      nodeSelector:
        beta.kubernetes.io/os: linux
