metrics-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: metrics-server
  name: heapster
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 8082
  selector:
    k8s-app: metrics-server
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    kubernetes.io/name: metrics-server
spec:
  selector:
    k8s-app: metrics-server
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    k8s-app: metrics-server
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  template:
    metadata:
      name: metrics-server
      labels:
        k8s-app: metrics-server
    spec:
      serviceAccountName: metrics-server
      priorityClassName: system-node-critical
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: k8s.aliyun.com
                operator: NotIn
                values:
                - "true"
      serviceAccount: metrics-server
      containers:
      - name: metrics-server
        image: registry-vpc.cn-shanghai.aliyuncs.com/acs/metrics-server:v0.3.8.5-307cf45-aliyun
        imagePullPolicy: Always
        command:
        - /metrics-server
        - "--source=kubernetes.hybrid:'"
        - "--sink=socket:tcp://monitor.csk.cn-shanghai.aliyuncs.com:8093?clusterId=ca526f1d669104211a414253a7b2274d6&public=true"
        livenessProbe:
          tcpSocket:
            port: 443
        readinessProbe:
          tcpSocket:
            port: 443
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
        volumeMounts:
          - mountPath: /var/addon
            name: addon-token
            readOnly: true
      volumes:
        - name: addon-token
          secret:
            defaultMode: 420
            items:
              - key: addon.token.config
                path: token-config
            secretName: addon.cms.token
